--- a/miniprogram/pages/home/index.wxml
+++ b/miniprogram/pages/home/index.wxml
@@ -51,7 +51,7 @@
           <!-- 地区筛选 -->
           <view class="dropdown-filter">
             <view class="dropdown-trigger" bindtap="toggleRegionDropdown">
-              <view class="dropdown-text">{{getSelectedRegionName()}}</view>
+              <text class="dropdown-text">{{getSelectedRegionName()}}</text>
               <view class="dropdown-arrow {{regionDropdownOpen ? 'open' : ''}}">▼</view>
             </view>
             <view class="dropdown-options {{regionDropdownOpen ? 'show' : ''}}">
