--- a/miniprogram/pages/home/index.wxml
+++ b/miniprogram/pages/home/index.wxml
@@ -3,13 +3,9 @@
   <view class="section">
     <view class="section-title">正在发生</view>
     <view class="banner-section">
-      <swiper class="banner-swiper" indicator-dots="{{true}}" autoplay="{{true}}" interval="3000" duration="500">
+      <swiper class="banner-swiper" indicator-dots="{{true}}" autoplay="{{true}}" interval="3000" duration="500" display-multiple-items="2.5" previous-margin="20rpx" next-margin="20rpx">
       <swiper-item wx:for="{{banners}}" wx:key="id">
         <image src="{{item.image}}" class="banner-image" mode="widthFix" bindtap="onBannerTap" data-url="{{item.url}}" />
-        <view class="banner-overlay">
-          <view class="banner-title">{{item.title}}</view>
-          <view class="banner-desc">{{item.description}}</view>
-        </view>
       </swiper-item>
     </swiper>
     </view>
