--- a/miniprogram/pages/home/index.wxss
+++ b/miniprogram/pages/home/index.wxss
@@ -15,7 +15,7 @@
   color: #068D7B;
   margin-bottom: 24rpx;
   text-align: left;
-  padding: 0 32rpx;
+  padding: 48rpx 32rpx 0 32rpx;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -35,10 +35,18 @@
 /* 板块1: Banner区域 */
 .banner-section {
   position: relative;
-  height: 280rpx;
+  height: 560rpx;
   overflow: hidden;
   border: 4rpx solid var(--accent1-color);
-  background: linear-gradient(to bottom, #068D7B 50%, #FFE501 50%);
+}
+
+.banner-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 50%;
+  background-color: #068D7B;
 }
 
 .banner-swiper {
@@ -46,8 +54,8 @@
 }
 
 .banner-image {
-  width: 384rpx;
-  height: 320rpx;
+  width: 576rpx;
+  height: 480rpx;
   border-radius: 8rpx;
   margin: 0 auto;
 }
