--- a/miniprogram/pages/home/index.wxml
+++ b/miniprogram/pages/home/index.wxml
@@ -1,6 +1,6 @@
 <view class="home-page fade-in">
   <!-- 板块1: 正在发生 - 海报Banner -->
-  <view class="section">
+  <view class="section banner-section-wrapper">
     <view class="section-title banner-title">正在发生</view>
     <view class="banner-section">
       <view class="banner-background"></view>
